--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     refers to the Hypertext Markup Language(HTML),Cascading Style Sheets(CSS) and JavaScript portion of web simple page of 
     HTML text to creating complex,responsive HTML5 websites designed to be accessed via various different browsers,devices and screen sizes.</p>
     <h1 style="color: green;">List of Practicals</h1>
-    <p>1. Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment <a href="../Practical-7/practical/Practical1.html">Practical-1</a></p>
+    <p>1. Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment <a href="../Practicals/practical1.html">Practical-1</a></p>
     <p>2. Live your First Web-Page on Git-Hub.<a href="../Practical-7/practical/Practical2.html">Practical-2</a></p>
     <p>3. Create a web page showing a basic html structure using character Entities and span Tag. <a href="../Practical-7/practical/Practical3.html">Practical-3</a></p>
     <p>4. Create a website having list of all practical and their individual practical Page links. <a href="../Practical-7/practical/Practical4.html">Practical-4</a></p>
