--- a/Practicals/practical5.html
+++ b/Practicals/practical5.html
@@ -7,17 +7,17 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
-        <img class="map1" src="../img/imagemap1.png" usemap="#map1" alt="Page menu">
+        <img class="map1" src="../image/imagemap1.png" usemap="#map1" alt="Page menu">
         <map id="map1" name="map1">
             <area shape="rect" coords="13,24,120,65" href="../index.html" alt="home">
-            <area shape="rect" coords="100,24,300,65" href="Practical1.html" alt="practical-1">
-            <area shape="rect" coords="300,24,520,65" href="Practical2.html" alt="practical-2">
-            <area shape="rect" coords="500,24,700,65" href="Practical3.html" alt="practical-3">
-            <area shape="rect" coords="700,24,900,65" href="Practical4.html" alt="practical-4">
+            <area shape="rect" coords="100,24,300,65" href="practical1.html" alt="practical-1">
+            <area shape="rect" coords="300,24,520,65" href="practical2.html" alt="practical-2">
+            <area shape="rect" coords="500,24,700,65" href="practical3.html" alt="practical-3">
+            <area shape="rect" coords="700,24,900,65" href="practical4.html" alt="practical-4">
             <area shape="rect" coords="900,24,1200,65" href="#" target="_self" alt="practical-5">
         </map>
         <h1 id=h2>Introduction to Front-End Technologies</h1>
-        <img class="map2" src="../img/Imagemap2.jpg" usemap="#map2" alt="menu">
+        <img class="map2" src="../image/Imagemap2.jpg" usemap="#map2" alt="menu">
         <map id="map2" name="map2">
             <area shape="poly" coords="43,47,148,47,138,151,95,161,52,152" href="Practical5_A.html" alt="html">
             <area shape="circle" coords="290,92,90" href="Practical5_B.html" alt="css">
