--- a/Practicals/practical6.html
+++ b/Practicals/practical6.html
@@ -64,7 +64,7 @@
 <body>
     <h2> PRACTICAL-6: CREATE FOLLOWING LAYOUT USING CSS LAYOUT PROPERTIES.</h2>
     <div class="box">
-        <img src="images/html.png" alt="">
+        <img src="image/html.png" alt="">
         <br>
         <h4>Introduction to HTML</h4>
         <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
@@ -73,7 +73,7 @@
         <a href="HTML.html"> Read More </a>
     </div>
     <div class="box">
-        <img src="images/css.png" alt="">
+        <img src="image/css.png" alt="">
         <br>
         <h4>Introduction to CSS</h4>
         <p>
@@ -82,7 +82,7 @@
         <a href="css.html"> Read More </a>
     </div>
     <div class="box">
-        <img src="images/javascript.jpg" alt="">
+        <img src="image/javascript.jpg" alt="">
         <br>
         <h4>Introduction to Javascript</h4>
         <p>
@@ -91,7 +91,7 @@
         <a href="javascript.html"> Read More </a>
     </div>
     <div class="box">
-        <img src="images/bootstrap.png" alt="">
+        <img src="image/bootstrap.png" alt="">
         <br>
         <h4>Introduction to Bootstarp</h4>
        <p>
