--- a/Practicals/practical6.html
+++ b/Practicals/practical6.html
@@ -70,7 +70,7 @@
         <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
             Hypertext refers to the way in which Web pages (HTML documents) are linked together.the link available on a webpage is called Hypertext.
         </p>    
-        <a href="Practicals/practical5A.html"> Read More </a>
+        <a href="../Practicals/practical5A.html"> Read More </a>
     </div>
     <div class="box">
         <img src="../image/css.png" alt="">
@@ -79,16 +79,16 @@
         <p>
             Cascading Style Sheets is a simple design language intended to simplify the process of making web pages presentable.CSS is easy to learn and understand.CSS handles the look and feel part of a web page. Using CSS, you can control the color of the text.
         </p>
-        <a href="Practicals/practical5B.html"> Read More </a>
+        <a href="../Practicals/practical5B.html"> Read More </a>
     </div>
     <div class="box">
-        <img src="../image/javascript.jpg" alt="">
+        <img src="../image/javascript.png" alt="">
         <br>
         <h4>Introduction to Javascript</h4>
         <p>
             JavaScript is a cross-platform, object-oriented scripting language used to make webpages interactive (e.g., having complex animations, clickable buttons, popup menus, etc.).  There are also more advanced server side versions of JavaScript.
         </p>
-        <a href="Practicals/practical5C.html"> Read More </a>
+        <a href="../Practicals/practical5C.html"> Read More </a>
     </div>
     <div class="box">
         <img src="../image/bootstrap.png" alt="">
@@ -97,7 +97,7 @@
        <p>
         Bootstrap is a free and open-source framework. It's the most popular HTML, CSS, and JS framework for developing responsive.Bootstrap was not only a framework but a way to makedesign patterns a standard in web design and development
        </p>
-        <a href="Practicals/practical5D.html"> Read More </a>
+        <a href="../Practicals/practical5D.html"> Read More </a>
     </div>
     <div class="box2">
 
