--- a/Practicals/practical8.html
+++ b/Practicals/practical8.html
@@ -32,8 +32,11 @@
         </div>
         <div id="rightsidebar">
             <div class="Project1">Project-1</div>
+            <img class="img" src="../image/img6.png" >
             <div class="Project2">Project-2</div>
+            <img class="img" src="../image/img7.png" >
             <div class="Project3">Project-3</div>
+            <img class="img" src="../image/img8.png" >
         </div>
     </div>
     <h1 id="TechnologyUsed">Technology Used</h1>
