--- a/Practicals/practical8.html
+++ b/Practicals/practical8.html
@@ -17,6 +17,9 @@
     </ul>
     </div>
     <h1 id="heading">PRACTICAL - 8</h1>
+    <div class="image">
+        <img class="img" src="../image/img1.png">
+    </div>
     <h1 id="TeamMembers">Team Members</h1>
     <div id="images">
         <img class="img" src="../image/img2.png">
