--- a/Practicals/practical8.html
+++ b/Practicals/practical8.html
@@ -16,8 +16,8 @@
         <li><a href="#Contact">CONTACT</a></li>
     </ul>
     </div>
-    <h1 id="heading">PRACTICAL - 8</h1>
-    <div class="images">
+    <h1 id="HOME">PRACTICAL-8</h1>
+    <div class="container">
         <img class="img" src="../image/img1.png">
     </div>
     <h1 id="TeamMembers">Team Members</h1>
