--- a/Practicals/practical8.html
+++ b/Practicals/practical8.html
@@ -35,11 +35,11 @@
         </div>
         <div id="rightsidebar">
             <div class="Project1">Project-1
-            <img class="img" src="../image/img6.png" ></div>
+            <img class="img" src="../image/img6.png" alt="Project1" ></div>
             <div class="Project2">Project-2
-            <img class="img" src="../image/img7.png" ></div>
+            <img class="img" src="../image/img7.png" alt="Project2" ></div>
             <div class="Project3">Project-3
-            <img class="img" src="../image/img8.png" ></div>
+            <img class="img" src="../image/img8.png" alt="Project3" ></div>
         </div>
     </div>
     <h1 id="TechnologyUsed">Technology Used</h1>
