--- a/Practicals/practical8.html
+++ b/Practicals/practical8.html
@@ -17,7 +17,7 @@
     </ul>
     </div>
     <h1 id="HOME">PRACTICAL-8</h1>
-    <div class="container">
+    <div class="images">
         <img class="img" src="../image/img1.png" height="400" width="400">
     </div>
     <h1 id="TeamMembers">Team Members</h1>
