--- a/Practicals/practical8.html
+++ b/Practicals/practical8.html
@@ -18,7 +18,7 @@
     </div>
     <h1 id="HOME">PRACTICAL-8</h1>
     <div class="square-image">
-        <img class=""sq-img-1" src="../image/img1.png" height="400" width="400">
+        <img class=""sq-img-1" src="../image/img1.png" >
     </div>
     <h1 id="TeamMembers">Team Members</h1>
     <div id="images">
@@ -35,11 +35,11 @@
         </div>
         <div id="rightsidebar">
             <div class="Project1">Project-1
-            <img class=""sq-img-1" src="../image/img6.png" height="200" width="200" ></div>
+            <img class=""sq-img-1" src="../image/img6.png"  ></div>
             <div class="Project2">Project-2
-            <img class=""sq-img-1" src="../image/img7.png" height="200" width="200" ></div>
+            <img class=""sq-img-1" src="../image/img7.png"  ></div>
             <div class="Project3">Project-3
-            <img class=""sq-img-1" src="../image/img8.png" height="200" width="200" ></div>
+            <img class=""sq-img-1" src="../image/img8.png"  ></div>
         </div>
     </div>
     <h1 id="TechnologyUsed">Technology Used</h1>
