--- a/Practicals/practical8.html
+++ b/Practicals/practical8.html
@@ -34,12 +34,18 @@
             <p id="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum fugiat architecto, vitae maxime esse accusamus iusto voluptatum itaque facilis modi aliquam! Eligendi accusamus consectetur dolorum debitis aliquam voluptas, laborum aliquid nihil? Quaerat assumenda fuga quis neque distinctio aperiam eveniet laboriosam, doloremque quas nulla veritatis quisquam ullam, alias exercitationem, a nihil voluptates sed dignissimos reprehenderit quod perspiciatis repellat veniam hic. Suscipit voluptatem dicta, odio provident officia vel explicabo perspiciatis tenetur rerum expedita excepturi repellat. Sint incidunt unde voluptates adipisci repudiandae! Sequi vitae similique impedit obcaecati odio ipsam eum aut laboriosam nulla esse amet, iusto nobis suscipit ad delectus voluptatem! Dolor, assumenda enim? Nobis, molestiae consequuntur unde modi at, consequatur impedit veniam magni rerum sequi culpa vero delectus repellendus quo ipsam amet commodi, eligendi asperiores nisi deserunt! Numquam harum et voluptatum soluta perspiciatis iusto minima tenetur, accusantium vitae, quidem tempora? Facilis consequatur quod molestias, placeat doloribus voluptates laborum quae? Temporibus aspernatur, nobis eius vitae placeat nihil suscipit, sit unde quasi omnis fuga recusandae ut illo commodi dolorum provident nisi, error corrupti similique. Consectetur, nam illum autem, optio, sequi cupiditate voluptates ad nihil vero est eveniet. Rem est assumenda minus praesentium eaque amet esse laudantium incidunt ipsum reiciendis excepturi, eos dolore dolor magni Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora laboriosam cumque laudantium accusamus molestias, praesentium quod amet quo ad laborum sunt sequi porro delectus? Veritatis dolorem vel, sunt soluta cupiditate porro beatae quisquam minus alias quae ad laboriosam sed nemo! Doloribus cum vitae molestiae veritatis explicabo natus repudiandae neque excepturi sint rerum, sit non culpa, sequi ad alias saepe ea! Fugit eveniet reprehenderit inventore repellat, molestias iste esse in unde animi eos repellendus aliquam id ex maxime adipisci consectetur dolorum sit voluptatum eius voluptatem laudantium magnam est necessitatibus. Temporibus debitis quibusdam, optio facilis dicta nihil sed blanditiis asperiores, ipsam neque reprehenderit dolore amet, assumenda consectetur unde dolorum</p>
         </div>
         <div id="rightsidebar">
-            <div class="Project1">Project-1
-            <img class=""sq-img-1" src="../image/img6.png" width="300"  height="300"  ></div>
-            <div class="Project2">Project-2
-            <img class=""sq-img-1" src="../image/img7.png" width="300"  height="300" ></div>
-            <div class="Project3">Project-3
-            <img class=""sq-img-1" src="../image/img8.png" width="300"  height="300" ></div>
+            <div class="square image">
+            <img class=""sq-img-1" src="../image/img6.png" width="300"  height="300"  >
+            <h2 >Project-1</h2>
+            </div>
+            <div class="square image">
+            <img class=""sq-img-1" src="../image/img7.png" width="300"  height="300" >
+            <h2 >Project-1</h2>
+            </div>
+            <div class="square image">
+            <img class=""sq-img-1" src="../image/img8.png" width="300"  height="300" >
+            <h2 >Project-1</h2>
+            </div>
         </div>
     </div>
     <h1 id="TechnologyUsed">Technology Used</h1>
