--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <p>6. Create Following Layout Using CSS Layout Properties.<a href="../Practical-8/Practicals/practical6.html">Practical-6</a></p>
     <p>7. Create a web page Layout using div tags.<a href="../Practical-8/Practicals/practical7.html">Practical-7</a></p>
     <p>8. Create a Web Page having Fixed Navigation Bar With the Given Content.<a href="./Practicals/practical8.html">Practical-8</a></p>
+     <p>9. Create a Responsive web layout with responsive navigation bar.<a href="./Practicals/practical9.html">Practical-9</a></p>
 
 </body>
 </html>
