--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     refers to the Hypertext Markup Language(HTML),Cascading Style Sheets(CSS) and JavaScript portion of web simple page of 
     HTML text to creating complex,responsive HTML5 websites designed to be accessed via various different browsers,devices and screen sizes.</p>
     <h1 style="color: green;">List of Practicals</h1>
-    <p>1. Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment <a href="../Practical-8/Practicals/practical1.html">Practical-1</a></p>
-    <p>2. Live your First Web-Page on Git-Hub.<a href="../Practical-8/Practicals/practical2.html">Practical-2</a></p>
-    <p>3. Create a web page showing a basic html structure using character Entities and span Tag. <a href="./Practical-8/Practicals/practical3.html">Practical-3</a></p>
-    <p>4. Create a website having list of all practical and their individual practical Page links. <a href="./Practical-8/Practicals/practical4.html">Practical-4</a></p>
-    <p>5.Create a Web-Page showing the use of Image-Map in the Web Application.<a href="./Practical-8/Practicals/practical5.html">Practical-5</a></p>
-    <p>6. Create Following Layout Using CSS Layout Properties.<a href="./Practical-8/Practicals/practical6.html">Practical-6</a></p>
-    <p>7. Create a web page Layout using div tags.<a href="./Practical-8/Practicals/practical7.html">Practical-7</a></p>
-    <p>8. Create a Web Page having Fixed Navigation Bar With the Given Content.<a href="./Practicals/practical8.html">Practical-8</a></p>
-     <p>9. Create a Responsive web layout with responsive navigation bar.<a href="./Practicals/practical9.html">Practical-9</a></p>
+    <p>1. Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment <a href="../Fullstack_Practical/Practicals/practical1.html">Practical-1</a></p>
+    <p>2. Live your First Web-Page on Git-Hub.<a href="../Fullstack_Practical/Practicals/practical2.html">Practical-2</a></p>
+    <p>3. Create a web page showing a basic html structure using character Entities and span Tag. <a href="../Fullstack_Practical/Practicals/practical3.html">Practical-3</a></p>
+    <p>4. Create a website having list of all practical and their individual practical Page links. <a href="../Fullstack_Practical/Practicals/practical4.html">Practical-4</a></p>
+    <p>5.Create a Web-Page showing the use of Image-Map in the Web Application.<a href="../Fullstack_Practical/Practicals/practical5.html">Practical-5</a></p>
+    <p>6. Create Following Layout Using CSS Layout Properties.<a href="../Fullstack_Practical/Practicals/practical6.html">Practical-6</a></p>
+    <p>7. Create a web page Layout using div tags.<a href="../Fullstack_Practical/Practicals/practical7.html">Practical-7</a></p>
+    <p>8. Create a Web Page having Fixed Navigation Bar With the Given Content.<a href="../Fullstack_Practical/Practicals/practical8.html">Practical-8</a></p>
+     <p>9. Create a Responsive web layout with responsive navigation bar.<a href="../Fullstack_Practical/Practicals/practical9.html">Practical-9</a></p>
 
 </body>
 </html>
