--- a/Practicals/practical9.html
+++ b/Practicals/practical9.html
@@ -29,7 +29,10 @@
           <a name="top"></a>
       
           <div id="banner">
-            <h2>PRACTICAL - 9</h2>
+             <h1 id="HOME">PRACTICAL-9</h1>
+             <div class="square-image">
+             <img class=""sq-img-1" src="../image/img1.png" >
+             </div>
           </div>
           <div id="images">
             <h1>Team Members</h1>
@@ -71,16 +74,19 @@
             </div>
             <div id="right-side">
               <div class="artical" id="p1">
+                <img class=""sq-img-1" src="../image/img6.png"   >
                 <h2>Project-1</h2>
               </div>
               <div class="artical" id="p2">
+                   <img class=""sq-img-1" src="../image/img7.png"  >
                 <h2>Project-2</h2>
               </div>
               <div class="artical" id="p3">
+                 <img class=""sq-img-1" src="../image/img8.png" >
                 <h2>Project-3</h2>
               </div>
             </div>
-          </div>
+          </div>                                                        
           <div id="boxes">
         <h1 id="TechnologyUsed">Technology Used</h1>
         <div class="box">
