--- a/Practicals/practical9.html
+++ b/Practicals/practical9.html
@@ -31,7 +31,7 @@
           <div id="banner">
              <h1 id="HOME">PRACTICAL-9</h1>
              <div class="square-image">
-             <img class=""sq-img-1" src="../image/img1.png" >
+             <img  src="../image/img1.png" >
              </div>
           </div>
           <div id="images">
@@ -74,15 +74,15 @@
             </div>
             <div id="right-side">
               <div class="artical" id="p1">
-                <img class=""sq-img-1" src="../image/img6.png"   >
+                <img  src="../image/img6.png"   >
                 <h2>Project-1</h2>
               </div>
               <div class="artical" id="p2">
-                   <img class=""sq-img-1" src="../image/img7.png"  >
+                   <img src="../image/img7.png"  >
                 <h2>Project-2</h2>
               </div>
               <div class="artical" id="p3">
-                 <img class=""sq-img-1" src="../image/img8.png" >
+                 <img  src="../image/img8.png" >
                 <h2>Project-3</h2>
               </div>
             </div>
