--- a/Practicals/practical9.html
+++ b/Practicals/practical9.html
@@ -29,7 +29,7 @@
           <a name="top"></a>
       
           <div id="banner">
-             <h1 id="HOME">PRACTICAL-9</h1>
+             <h1 id="top">PRACTICAL-9</h1>
              <div class="square-image">
              <img  src="../image/img1.png" >
              </div>
