--- a/Practicals/practical9.html
+++ b/Practicals/practical9.html
@@ -28,7 +28,7 @@
           </div>
           <a name="top"></a>
       
-          <div id="banner">
+          <div id="top">
              <h1>PRACTICAL-9</h1>
              <div class="square-image">
              <img  src="../image/img1.png" >
