--- a/Practicals/practical10.html
+++ b/Practicals/practical10.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header">
-        <img src="../images/fullstack-icon.png" alt="">
+        <img src="../image/Fullstack-icon.png" alt="">
         <h1>Full-Stack</h1>
     </div>
     <input type="checkbox" name="" id="chk">
@@ -23,7 +23,7 @@
         <i class="fa fa-times"></i>
     </label>
     <div class="content">
-        <img src="../images/background.jpg" alt="">
+        <img src="../image/img1.png" alt="">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, dolore voluptatibus. Debitis minus corrupti
             repellat labore necessitatibus. Porro tempore provident deserunt, odit cumque veniam natus ab quae.
             Molestias eveniet ratione sint, exercitationem quis fugit fugiat vel nisi obcaecati, expedita, enim in sequi
