--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>7. Create a web page Layout using div tags.<a href="../Fullstack_Practical/Practicals/practical7.html">Practical-7</a></p>
     <p>8. Create a Web Page having Fixed Navigation Bar With the Given Content.<a href="../Fullstack_Practical/Practicals/practical8.html">Practical-8</a></p>
     <p>9. Create a Responsive web layout with responsive navigation bar.<a href="../Fullstack_Practical/Practicals/practical9.html">Practical-9</a></p>
-    <p>10. Create a Responsive side bar navigation menu.<a href="practical/Practical10.html">Practical-10</a></p>
+    <p>10. Create a Responsive side bar navigation menu.<a href="../Fullstack_Practical/Practicals/practical10.html">Practical-10</a></p>
 
 </body>
 </html>
