--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <p>8. Create a Web Page having Fixed Navigation Bar With the Given Content.<a href="../Fullstack_Practical/Practicals/practical8.html">Practical-8</a></p>
     <p>9. Create a Responsive web layout with responsive navigation bar.<a href="../Fullstack_Practical/Practicals/practical9.html">Practical-9</a></p>
     <p>10. Create a Responsive side bar navigation menu.<a href="../Fullstack_Practical/Practicals/practical10.html">Practical-10</a></p>
-
+    <p>11. Create a Table that represent Live Practical Book Records.<a href="../Fullstack_Practical/Practicals/practical11.html">Practical-11</a></p>
 </body>
 </html>
