--- a/Practicals/practical11.html
+++ b/Practicals/practical11.html
@@ -27,7 +27,7 @@
                 <td>Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox
                     Environment</td>
                 <td>
-                    <a href="./Practical1.html">Practical-1</a>
+                    <a href="./practical1.html">Practical-1</a>
                 </td>
                 <td class="checked">Checked</td>
                 <td>
@@ -39,7 +39,7 @@
                 <td>2</td>
                 <td>Live your First Web-Page on Git-Hub.</td>
                 <td>
-                    <a href="./Practical2.html">Practical-2</a>
+                    <a href="./practical2.html">Practical-2</a>
                 </td>
                 <td class="checked">Checked</td>
                 <td>
@@ -51,7 +51,7 @@
                 <td>3</td>
                 <td>Create a web page showing a basic html structure using character Entities and span Tag.</td>
                 <td>
-                    <a href="./Practical3.html">Practical-3</a>
+                    <a href="./practical3.html">Practical-3</a>
                 </td>
                 <td class="checked">Checked</td>
                 <td>
@@ -63,7 +63,7 @@
                 <td>4</td>
                 <td>Create a website having list of all practical and their individual practical Page links.</td>
                 <td>
-                    <a href="./Practical4.html">Practical-4</a>
+                    <a href="./practical4.html">Practical-4</a>
                 </td>
                 <td class="checked">Checked</td>
                 <td>
@@ -75,7 +75,7 @@
                 <td>5</td>
                 <td>Create a Web-Page showing the use of Image-Map in the Web Application.</td>
                 <td>
-                    <a href="./Practical5.html">Practical-5</a>
+                    <a href="./practical5.html">Practical-5</a>
                 </td>
                 <td class="checked">Checked</td>
                 <td>
@@ -87,7 +87,7 @@
                 <td>6</td>
                 <td>Create following layout using css layout properties.</td>
                 <td>
-                    <a href="./Practical6.html">Practical-6</a>
+                    <a href="./practical6.html">Practical-6</a>
                 </td>
                 <td class="checked">Checked</td>
                 <td>
@@ -99,7 +99,7 @@
                 <td>7</td>
                 <td>Create a simple website layout using css layout properties.</td>
                 <td>
-                    <a href="./Practical7.html">Practical-7</a>
+                    <a href="./practical7.html">Practical-7</a>
                 </td>
                 <td class="unchecked">Un-checked</td>
                 <td>
@@ -111,7 +111,7 @@
                 <td>8</td>
                 <td>Create a Web Page having Fixed Navigation Bar with the given content.</td>
                 <td>
-                    <a href="./Practical8.html">Practical-8</a>
+                    <a href="./practical8.html">Practical-8</a>
                 </td>
                 <td class="unchecked">Un-checked</td>
                 <td>
@@ -123,7 +123,7 @@
                 <td>9</td>
                 <td>Create a Responsive Web Layout with Responsive Navigation Bar.</td>
                 <td>
-                    <a href="./Practical9.html">Practical-9</a>
+                    <a href="./practical9.html">Practical-9</a>
                 </td>
                 <td class="unchecked">Un-checked</td>
                 <td>
@@ -135,7 +135,7 @@
                 <td>10</td>
                 <td>Create a Responsive Side-Bar Navigation Menu.</td>
                 <td>
-                    <a href="./Practical10.html">Practical-10</a>
+                    <a href="./practical10.html">Practical-10</a>
                 </td>
                 <td class="unchecked">Un-checked</td>
                 <td>
