--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <p>9. Create a Responsive web layout with responsive navigation bar.<a href="../Fullstack_Practical/Practicals/practical9.html">Practical-9</a></p>
     <p>10. Create a Responsive side bar navigation menu.<a href="../Fullstack_Practical/Practicals/practical10.html">Practical-10</a></p>
     <p>11. Create a Table that represent Live Practical Book Records.<a href="../Fullstack_Practical/Practicals/practical11.html">Practical-11</a></p>
+     <p>12. Create a Custom Price Table Template.<a href="../Fullstack_Practical/Practicals/practical12.html">Practical-12</a></p>
 </body>
 </html>
