--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <p>10. Create a Responsive side bar navigation menu.<a href="../Fullstack_Practical/Practicals/practical10.html">Practical-10</a></p>
     <p>11. Create a Table that represent Live Practical Book Records.<a href="../Fullstack_Practical/Practicals/practical11.html">Practical-11</a></p>
      <p>12. Create a Custom Price Table Template.<a href="../Fullstack_Practical/Practicals/practical12.html">Practical-12</a></p>
+    <p>13. Create a Responsive footer Template.<a href="../Fullstack_Practical/Practicals/practical13.html">Practical-13</a></p>
 </body>
 </html>
