--- a/Practicals/practical13.html
+++ b/Practicals/practical13.html
@@ -41,9 +41,9 @@
         <section class="contact">
             <h2>Contact Us</h2>
             <ul>
-                <li><i class="fa fa-home"></i><span>Sirsaganj,Firozabad,India</span></li>
-                <li><i class="fa fa-envelope"></i><span>guptaji@gmail.com</span></li>
-                <li><i class="fa fa-mobile"></i><span>Mobile: 8979184740</span></li>
+                <li><i class="fa fa-home"></i><span>Uttar pradesh,India</span></li>
+                <li><i class="fa fa-envelope"></i><span>manibansal733@gmail.com</span></li>
+                <li><i class="fa fa-mobile"></i><span>Mobile:1458***</span></li>
                 <li><i class="fa fa-facebook-official"></i><a href="#">betalabsindia</a></li>
             </ul>
         </section>
