--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <p>11. Create a Table that represent Live Practical Book Records.<a href="../Fullstack_Practical/Practicals/practical11.html">Practical-11</a></p>
      <p>12. Create a Custom Price Table Template.<a href="../Fullstack_Practical/Practicals/practical12.html">Practical-12</a></p>
     <p>13. Create a Responsive footer Template.<a href="../Fullstack_Practical/Practicals/practical13.html">Practical-13</a></p>
+     <p>14. Create a Responsive side bar navigation menu.<a href="../Fullstack_Practical/Practicals/practical14.html">Practical-14</a></p>
+
 </body>
 </html>
