--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
      <p>14. Create a Responsive side bar navigation menu.<a href="../Fullstack_Practical/Practicals/practical14.html">Practical-14</a></p>
     <p>15. Create a Responsive side bar navigation menu.<a href="../Fullstack_Practical/Practicals/Practical15.html">Practical-15</a></p>
     <p>16. Create a To-do List using javascript.<a href="../Fullstack_Practical/Practicals/Practical16.html">Practical-16</a></p>
+    <p>17. Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.<a href="./practical/Practical17.html">Practical-17</a></p>
+
 </body>
 </html>
