--- a/Practicals/Practical17.html
+++ b/Practicals/Practical17.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live clock</title>
-    <link rel="stylesheet" href="css/practical17.css ">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <title>Live Clock Using JS</title>
+    <link href="../css/clock.css" rel="stylesheet">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 </head>
-
 <body>
-
-    <time id="time"></time>
-    <h1 id="greeting">Good Morning</h1>
-    <h2 id="name" contenteditable="true"></h2>
-    <h3 id="date">sat nov 14 2020</h3>
-
-    <script src="javascript/clock.js"></script>
+<time id="time"></time>
+<h1 id="greeting"></h1>
+<h2 contenteditable="true" id="name"></h2>
+<h3 id="date"></h3>
+<script src="../JS/clock.js"></script>
 </body>
-
 </html>
