--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <p>15. Create a Responsive side bar navigation menu.<a href="../Fullstack_Practical/Practicals/Practical15.html">Practical-15</a></p>
     <p>16. Create a To-do List using javascript.<a href="../Fullstack_Practical/Practicals/Practical16.html">Practical-16</a></p>
     <p>17. Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.<a href="../Fullstack_Practical/Practicals/Practical17.html">Practical-17</a></p>
-
+    <p>18. Create an HTML Form and Validate it with Javascript.<a href="../Fullstack_Practical/Practicals/Practical18.html">Practical-18</a></p>
 </body>
 </html>
